--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon app_Query.js"
+    "start": "node app_Query.js"
   },
   "keywords": [],
   "author": "",
