adding "dev" in scripts to include nodemon for local runs

--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
-    "start": "node app_Query.js"
+    "start": "node app_Query.js",
+    "dev": "nodemon app_Query.js"
   },
   "keywords": [],
   "author": "",
