--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "groq-sdk": "^0.19.0"
   },
   "devDependencies": {},
   "description": "Creating a server with Express framework to use nodeJS technology in REST API architecture by coding APIs",
